chore: update gitignore patterns and configure Astro build settings for GitHub Pages

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 dist/
 # generated types
 .astro/
+.assets/
 
 # dependencies
 node_modules/
@@ -12,7 +13,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
@@ -20,5 +20,6 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-# jetbrains setting folder
+# setting folders
 .idea/
+.vscode/
