feat: add app store links and update deployment config for production

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm ci
         
       - name: Build Astro site
-        run: npm run build
+        run: npm run build:dev
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
